# agentic-quant-trading-python

./: Makefile  README.md  pyproject.toml
docs/: architecture.md  inventory.md  monitoring.md  serving.md  validation.md
docs/benchmarks/: agent_builder_events.jsonl  agent_builder_report.md  agent_builder_run_manifest.json  agent_builder_state.json  agent_spec.json  contract_promotion_review.md  cvar_position_sizing.md  drift_report.md  experiment_manifest.md  experiment_run_contract.json  hmm_regime_features.md  mini_backtest_orchestration.md  numerai_benchmark_trail.md  purged_embargo_validation.md  qrdqn_cvar_smoke.md  qrdqn_smoke.md  rag_evaluation_harness.md  research_cycle_report.md  research_os_demo.md  research_workflow_state.json  serving_latency.md  trading_experiment_audit.md  walk_forward_validation.md
docs/product/: product_reality_check.md  quant_research_os_implementation.md  tool_calling_research_agent.md  what_is_quant_research_os.md
src/agentic_quant/: __init__.py
src/agentic_quant/benchmarks/: __init__.py  demo_numerai.py  numerai.py
tests/: test_agent_builder.py  test_cvar_risk.py  test_drift_monitoring.py  test_experiment_audit.py  test_experiment_manifest.py  test_experiment_run_contract.py  test_hmm_regime_features.py  test_mini_backtest_orchestration.py  test_model_registry.py  test_numerai_benchmark.py  test_public_boundary.py  test_purged_embargo_validation.py  test_rag_evaluation.py  test_research_cli.py  test_research_cycle.py  test_research_os.py  test_serving_app.py  test_walk_forward_validation.py
tests/e2e/: test_live_server.py
(+43 files in other folders)
