[project]
name = "agentic-quant-trading-python"
version = "0.1.0"
description = "Public companion lab for production-style financial ML/RL systems."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
quant-research = "agentic_quant.research_os.cli:main"

[project.optional-dependencies]
serving = [
  "fastapi>=0.115",
  "torch>=2.5",
  "uvicorn>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
